faq whitespace fix

--- a/css/style.css
+++ b/css/style.css
@@ -603,7 +603,6 @@ span.clients-name {
 	min-height:50px;
 	padding: 15px;
 	color:black;
-	margin-bottom:20px;
 }
 
 
